# microfetch

./: .envrc  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
benches/: benchmark.rs
nix/: package.nix  shell.nix
src/: colors.rs  desktop.rs  lib.rs  main.rs  release.rs  system.rs  uptime.rs
